# causal-agent

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  app.py  codegen.py  docker-compose.yml  local.db  planner.py  power.py  pyproject.toml  report.py  requirements.txt  schemas.py  start.bat  streamlit_app.py
.github/workflows/: ci.yml
backend/: api.py  main.py  requirements.txt
chroma_db/: chroma.sqlite3
docs/: kb_experiment_design.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/analysis/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/new-experiment/: page.tsx
frontend/app/observational/new/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: experiment-wizard.tsx  providers.tsx  settings-modal.tsx  sidebar.tsx
frontend/lib/: settings.ts
src/causal_agent/: analysis.py  causal.py  cli.py  codegen.py  config.py  critic.py  init.py  llm.py  planner.py  power.py  rag.py  report.py  schemas.py  utils.py
tests/: test_causal_new.py  test_power.py  test_report.py  test_schemas.py  test_smoke.py
