
---

## pyproject.toml

```toml
[project]
name = "causal-agent"
version = "0.2.0"
description = "Experiment design copilot with schema validation, power sizing, report and analysis code generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.35.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
