[project]
name = "causal-agent"
version = "0.1.0"
description = "Experiment design agent MVP (power + plan + analysis scaffold)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Jingyu Ruan"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "streamlit>=1.36",
  "scikit-learn>=1.4",
  "openai>=1.0.0",
]

[project.scripts]
causal-agent = "causal_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
