[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-agent"
version = "0.2.0"
description = "Experiment design copilot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.35.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "openai>=1.0.0",
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "python-multipart>=0.0.9",
  "chromadb>=0.4.22",
  "openpyxl>=3.1.0",
  "tabulate>=0.9.0",
  "python-docx>=1.1.0",
  "pypdf>=3.17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]

# 关键修复：告诉 setuptools 代码在 src 目录下
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]  # 辅助配置：帮 pytest 也可以直接找到 src
